# depenemy

./: .depenemy.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
demo/: package.json  requirements.txt
depenemy/: __init__.py  __main__.py  cache.py  cli.py  config.py  scanner.py  types.py
depenemy/advisories/: __init__.py  osv.py
depenemy/data/: top_npm_packages.json  top_pypi_packages.json
depenemy/fetchers/: __init__.py  base.py  crates.py  github.py  npm.py  pypi.py
depenemy/parsers/: __init__.py  base.py  npm.py  python.py  rust.py  solidity.py
depenemy/reporters/: __init__.py  json_reporter.py  sarif.py  table.py
depenemy/rules/: __init__.py  base.py
depenemy/rules/behavioral/: __init__.py  b001_range_specifier.py  b002_unpinned.py  b003_lagging_version.py
depenemy/rules/compliance/: __init__.py  c001_restrictive_license.py  c002_no_license.py
depenemy/rules/quality/: __init__.py  q001_single_maintainer.py
depenemy/rules/reputation/: __init__.py  r001_young_author.py  r002_young_package.py  r003_low_weekly_downloads.py  r004_low_total_downloads.py  r005_stale_package.py  r006_few_contributors.py  r007_below_security_patch.py  r008_deprecated.py  r009_typosquatting.py  r010_recently_published_version.py
depenemy/rules/supply_chain/: __init__.py  s001_install_scripts.py  s002_no_source_repo.py  s003_archived_repo.py  s004_dependency_confusion.py  s005_malicious_package.py  s006_no_license.py
tests/: conftest.py  test_scanner.py
tests/fixtures/npm/: b001_caret_ranges.json  b001_gte_range.json  b001_latest_tag.json  b001_or_range.json  b001_star_wildcard.json  b001_tilde_ranges.json  (+10 more)
tests/test_parsers/: test_npm.py  test_npm_parser.py  test_python.py
tests/test_reporters/: test_json_reporter.py  test_sarif.py  test_table.py
tests/test_rules/: test_b001_range_specifier.py  test_b002_unpinned.py  test_behavioral.py  test_detection_coverage.py  test_r009_typosquatting.py  test_reputation.py  test_s004_s005.py  test_supply_chain.py
