[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depenemy"
version = "0.1.0"
description = "Dependency scanner that finds your enemies in the supply chain"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "W3OSC", email = "contact@w3osc.com" }]
keywords = ["security", "dependencies", "supply-chain", "scanner", "sarif", "sbom"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
depenemy = "depenemy.cli:app"

[project.urls]
Homepage = "https://github.com/W3OSC/depenemy"
Repository = "https://github.com/W3OSC/depenemy"
Issues = "https://github.com/W3OSC/depenemy/issues"
Changelog = "https://github.com/W3OSC/depenemy/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["depenemy"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N818", "UP017", "UP042", "UP045", "UP036", "I001"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=depenemy --cov-report=term-missing --cov-report=xml"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
